{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "MapControls",
            "id": "35bdeb0d-c0ff-4988-a142-6669c7d1baea",
            "actions": [
                {
                    "name": "SelectPOI_tap",
                    "type": "PassThrough",
                    "id": "5e2dcbc6-70f3-4f5b-a654-e03bd48fce1c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "00d9b8ba-2205-47df-af14-b0a3cbbe9f1b",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectPOI_tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "271c6873-f74c-47bc-a0a3-61adea0d31e5",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectPOI_tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "06253ed8-6ef9-4cde-93d8-d0c90429ad2a",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectPOI_tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "020d1ed3-257d-4bc6-9a96-418a15a01b31",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectPOI_tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerControls",
            "id": "ab74394f-bc84-4130-aaab-f4af32b14953",
            "actions": [
                {
                    "name": "TapDown",
                    "type": "PassThrough",
                    "id": "a780930a-a351-4071-8764-c6f94a12f7b9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TapUp",
                    "type": "Button",
                    "id": "31d8fe0f-5704-49e4-a7e9-ff796bb7749a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ae88ab79-d775-48f5-bd0b-4c3525ede35c",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TapDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7dbe0d0b-2bc6-4ddf-adcd-2dd496fe998a",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TapUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}